--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "type": "git",
     "url": "https://github.com/standardnotes/web"
   },
+  "engines": {
+    "node": ">=10.21.0 <12.0",
+    "yarn": ">=1.22.4"
+  },
   "scripts": {
     "start": "webpack-dev-server --progress",
     "bundle": "webpack --mode production",
