--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-angularjs-annotate": "^0.10.0",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
     "connect": "^3.7.0",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.0.1",
     "ng-cache-loader": "0.0.26",
