--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --progress",
-    "bundle": "webpack --mode production",
-    "build": "bundle install && npm install && npm run bundle",
+    "prebuild": "yarn submodules",
+    "build": "webpack --mode production",
     "submodules": "git submodule update --init --force --remote",
     "test": "karma start karma.conf.js --single-run",
     "lint": "eslint --fix app/assets/javascripts/**/*.js"
